Fix z-index issue with background video and section

--- a/src/components/Altair/altair.css
+++ b/src/components/Altair/altair.css
@@ -10,7 +10,7 @@
   position: relative;
   width: 100%;
   height: auto;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 
@@ -62,4 +62,7 @@
 
 .explore-more-button:hover {
   background-color: #00c3ff;
+}
+.rotated-video{
+  z-index: -1;
 }
